--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jksdairyhub.jksdairyhub">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".Utils.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JKDairyHub">
+        android:theme="@style/Theme.JKDairyHub"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".App.Activities.AddCustomerActivity"></activity>
         <activity
             android:name=".App.Activities.MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/Theme.JKDairyHub.NoActionBar"></activity>
-        <activity android:name=".App.Activities.AuthActivity">
+            android:theme="@style/Theme.JKDairyHub.NoActionBar" />
+        <activity
+            android:name=".App.Activities.AuthActivity"
+            android:theme="@style/Theme.JKDairyHub.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
